# gleam.io-bot-extension

./: .gitignore  Cargo.toml  README.md
pkg/: manifest.json  package.json  run_wasm.js
pkg/twitter/: follow.js  retweet.js  tweet.js
src/: bot_logic.rs  checkbox.rs  enums.rs  lib.rs  messages.rs  style.css  util.rs  yew_app.rs
