[package]
name = "gleam-extension"
version = "0.2.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
yew = "0.16"
string-tools = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "HtmlCollection",
    "Document",
    "InputEvent",
    "Crypto",
]